--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   llm-trading:
@@ -19,7 +19,7 @@ services:
       - FRED_API_KEY=${FRED_API_KEY:-}
       - WANDB_API_KEY=${WANDB_API_KEY:-}
     runtime: nvidia
-    shm_size: '16gb'
+    shm_size: "16gb"
     stdin_open: true
     tty: true
     command: /bin/bash
@@ -41,5 +41,5 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
       - JUPYTER_ENABLE_LAB=yes
     runtime: nvidia
-    shm_size: '16gb'
+    shm_size: "16gb"
     command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token='' --NotebookApp.password=''
